overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,6 @@
 @tailwind utilities;
 
 
+html, body {
+    overflow-x: hidden;
+}
